2013-02-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #45732: Connect static_territories with static_countries
	* Resolves #45737: Connect static_countries to static_currencies

2013-02-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #45690: Require TYPO3 4.7
	* Updated version to 2.4.0
	* Resolves #45691: Always keep tables utf-8-encoded
	
2012-01-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #33155: Call to deprecated bigDoc::middle method
	* Updated version to 2.2.1

2011-01-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Initial upload
	* Updated version to 2.2
